--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -233,10 +233,12 @@ jobs:
 
       - name: Publish macOS Ryujinx
         run: |
+          chmod +x ./distribution/macos/create_macos_build_ava.sh
           ./distribution/macos/create_macos_build_ava.sh . publish_tmp_ava publish_ava ./distribution/macos/entitlements.xml "${{ steps.version_info.outputs.build_version }}" "${{ steps.version_info.outputs.git_short_hash }}" Release
 
       - name: Publish macOS Ryujinx.Headless.SDL2
         run: |
+          chmod +x ./distribution/macos/create_macos_build_headless.sh
           ./distribution/macos/create_macos_build_headless.sh . publish_tmp_headless publish_headless ./distribution/macos/entitlements.xml "${{ steps.version_info.outputs.build_version }}" "${{ steps.version_info.outputs.git_short_hash }}" Release
 
       - name: Pushing new release
