--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -169,10 +169,12 @@ jobs:
 
       - name: Publish macOS Ryujinx
         run: |
+          chmod +x ./distribution/macos/create_macos_build_ava.sh
           ./distribution/macos/create_macos_build_ava.sh . publish_tmp publish ./distribution/macos/entitlements.xml "${{ env.RYUJINX_BASE_VERSION }}" "${{ steps.git_short_hash.outputs.result }}" "${{ matrix.configuration }}" "-p:ExtraDefineConstants=DISABLE_UPDATER"
 
       - name: Publish macOS Ryujinx.Headless.SDL2
         run: |
+          chmod +x ./distribution/macos/create_macos_build_headless.sh
           ./distribution/macos/create_macos_build_headless.sh . publish_tmp_headless publish_headless ./distribution/macos/entitlements.xml "${{ env.RYUJINX_BASE_VERSION }}" "${{ steps.git_short_hash.outputs.result }}" "${{ matrix.configuration }}" "-p:ExtraDefineConstants=DISABLE_UPDATER"
 
       - name: Upload Ryujinx artifact
