fix/warning from common project

--- a/src/Ryujinx.Common/Ryujinx.Common.csproj
+++ b/src/Ryujinx.Common/Ryujinx.Common.csproj
@@ -2,12 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants Condition=" '$(ExtraDefineConstants)' != '' ">
-      $(DefineConstants);$(ExtraDefineConstants)
-    </DefineConstants>
-    <DefineConstants Condition=" '$(ExtraDefineConstants)' == '' ">
-      $(DefineConstants)
-    </DefineConstants>
+    <DefineConstants>$(DefineConstants);$(ExtraDefineConstants)</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
