--- a/.github/workflows/nightly_pr_comment.yml
+++ b/.github/workflows/nightly_pr_comment.yml
@@ -30,6 +30,7 @@ jobs:
                   }
                 }
               }
+              return null; // Ensure a value is returned if no matching pull request is found
             })();
             if (issue_number) {
               core.info(`Using pull request ${issue_number}`);
