fix/dependabot pipeline

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,8 +11,8 @@ updates:
     commit-message:
       prefix: "ci"
 
-  - package-ecosystem: nuget
-    directory: /
+  - package-ecosystem: "nuget"
+    directory: "/"
     open-pull-requests-limit: 10
     schedule:
       interval: weekly
@@ -21,7 +21,7 @@ updates:
     reviewers:
       - fsegurai
     commit-message:
-      prefix: nuget
+      prefix: "nuget"
     groups:
       Avalonia:
         patterns:
