--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,22 +3,23 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: "weekly"
     labels:
       - "infra"
     reviewers:
-      - fsegurai
+      - "fsegurai"
     commit-message:
       prefix: "ci"
+
   - package-ecosystem: "nuget"
     directory: "/"
     open-pull-requests-limit: 10
     schedule:
-      interval: weekly
+      interval: "weekly"
     labels:
       - "infra"
     reviewers:
-      - fsegurai
+      - "fsegurai"
     commit-message:
       prefix: "nuget"
     groups:
