--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 ﻿version: 2
 updates:
   - package-ecosystem: "github-actions"
-    directory: "/"
+    directory: /
     schedule:
       interval: "weekly"
     labels:
@@ -12,7 +12,7 @@ updates:
       prefix: "ci"
 
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: /
     open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
