--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,40 +1,12 @@
 ﻿version: 2
 updates:
   - package-ecosystem: "github-actions"
-    directory: /
+    directory: "/"
     schedule:
       interval: "weekly"
-    labels:
-      - "infra"
-    reviewers:
-      - "fsegurai"
-    commit-message:
-      prefix: "ci"
-
   - package-ecosystem: "nuget"
-    directory: /
+    versioning-strategy: "increase"
+    directory: "/"
     open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
-    labels:
-      - "infra"
-    reviewers:
-      - "fsegurai"
-    commit-message:
-      prefix: "nuget"
-    groups:
-      Avalonia:
-        patterns:
-          - "*Avalonia*"
-      Silk.NET:
-        patterns:
-          - "Silk.NET*"
-      OpenTK:
-        patterns:
-          - "OpenTK*"
-      SixLabors:
-        patterns:
-          - "SixLabors*"
-      NUnit:
-        patterns:
-          - "NUnit*"
