--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -2,14 +2,16 @@ name: Build PR
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
     paths:
       - '**'
+      - '.github/workflows/*.yml'
       - '!.github/**'
       - '!*.yml'
       - '!*.config'
       - '!*.md'
-      - '.github/workflows/*.yml'
+  workflow_dispatch:
+    inputs: { }
 
 permissions:
   pull-requests: write
