--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs: { }
   push:
-    branches: [ main ]
+    branches: [ "main" ]
     paths-ignore:
       - ".github/**"
       - "docs/**"
