--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,35 +1,43 @@
 audio:
-- changed-files:
-  - any-glob-to-any-file: 'src/Ryujinx.Audio*/**'
+  - changed-files:
+      - any-glob-to-any-file: 'src/Ryujinx.Audio*/**'
 
 cpu:
-- changed-files:
-  - any-glob-to-any-file: ['src/ARMeilleure/**', 'src/Ryujinx.Cpu/**', 'src/Ryujinx.Memory/**']
+  - changed-files:
+      - any-glob-to-any-file: [ 'src/ARMeilleure/**', 'src/Ryujinx.Cpu/**', 'src/Ryujinx.Memory/**' ]
 
 gpu:
-- changed-files:
-  - any-glob-to-any-file: ['src/Ryujinx.Graphics.*/**', 'src/Spv.Generator/**', 'src/Ryujinx.ShaderTools/**']
+  - changed-files:
+      - any-glob-to-any-file: [ 'src/Ryujinx.Graphics.*/**', 'src/Spv.Generator/**', 'src/Ryujinx.ShaderTools/**' ]
 
 'graphics-backend:opengl':
-- changed-files:
-  - any-glob-to-any-file: 'src/Ryujinx.Graphics.OpenGL/**'
+  - changed-files:
+      - any-glob-to-any-file: 'src/Ryujinx.Graphics.OpenGL/**'
 
 'graphics-backend:vulkan':
-- changed-files:
-  - any-glob-to-any-file: ['src/Ryujinx.Graphics.Vulkan/**', 'src/Spv.Generator/**']
+  - changed-files:
+      - any-glob-to-any-file: [ 'src/Ryujinx.Graphics.Vulkan/**', 'src/Spv.Generator/**' ]
 
 gui:
-- changed-files:
-  - any-glob-to-any-file: ['src/Ryujinx/**', 'src/Ryujinx.UI.Common/**', 'src/Ryujinx.UI.LocaleGenerator/**']
+  - changed-files:
+      - any-glob-to-any-file: [ 'src/Ryujinx/**', 'src/Ryujinx.UI.Common/**', 'src/Ryujinx.UI.LocaleGenerator/**' ]
 
 horizon:
-- changed-files:
-  - any-glob-to-any-file: ['src/Ryujinx.HLE/**', 'src/Ryujinx.Horizon/**']
+  - changed-files:
+      - any-glob-to-any-file: [ 'src/Ryujinx.HLE/**', 'src/Ryujinx.Horizon/**' ]
 
 kernel:
-- changed-files:
-  - any-glob-to-any-file: 'src/Ryujinx.HLE/HOS/Kernel/**'
+  - changed-files:
+      - any-glob-to-any-file: 'src/Ryujinx.HLE/HOS/Kernel/**'
 
 infra:
-- changed-files:
-  - any-glob-to-any-file: ['.github/**', 'distribution/**', 'Directory.Packages.props']
+  - changed-files:
+      - any-glob-to-any-file: [ '.github/**', 'distribution/**', 'Directory.Packages.props' ]
+
+assets:
+  - changed-files:
+      - any-glob-to-any-file: [ 'assets/**' ]
+
+docs:
+  - changed-files:
+      - any-glob-to-any-file: [ 'docs/**', 'CONTRIBUTING.md', 'LICENSE', 'README.md' ]
