fix/improve labeler configuration file

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -38,6 +38,6 @@ assets:
   - changed-files:
       - any-glob-to-any-file: [ 'assets/**' ]
 
-docs:
+documentation :
   - changed-files:
       - any-glob-to-any-file: [ 'docs/**', 'CONTRIBUTING.md', 'LICENSE', 'README.md' ]
