fix/documentation label with new addition files

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -38,6 +38,6 @@ assets:
   - changed-files:
       - any-glob-to-any-file: [ 'assets/**' ]
 
-documentation :
+documentation:
   - changed-files:
-      - any-glob-to-any-file: [ 'docs/**', 'CONTRIBUTING.md', 'LICENSE', 'README.md' ]
+      - any-glob-to-any-file: [ 'docs/**', 'CHANGELOG.md', 'CONTRIBUTING.md', 'LICENSE', 'README.md' ]
