--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs: { }
   push:
-    branches: [ "main" ]
+    branches: [ "canary" ]
     paths-ignore:
       - '.github/**'
       - 'docs/**'
