--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,12 +112,12 @@ jobs:
           name: ryujinx-${{ matrix.configuration }}-${{ env.RYUJINX_BASE_VERSION }}+${{ steps.git_short_hash.outputs.result }}-${{ matrix.platform.zip_os_name }}
           path: publish
 
-      #- name: Upload Ryujinx (AppImage) artifact
-      #  uses: actions/upload-artifact@v4
-      #  if: github.event_name == 'pull_request' && matrix.platform.os == 'ubuntu-latest'
-      #  with:
-      #    name: ryujinx-${{ matrix.configuration }}-${{ env.RYUJINX_BASE_VERSION }}+${{ steps.git_short_hash.outputs.result }}-${{ matrix.platform.zip_os_name }}-AppImage
-      #    path: publish_appimage
+      - name: Upload Ryujinx (AppImage) artifact
+        uses: actions/upload-artifact@v4
+        if: github.event_name == 'pull_request' && matrix.platform.os == 'ubuntu-latest'
+        with:
+          name: ryujinx-${{ matrix.configuration }}-${{ env.RYUJINX_BASE_VERSION }}+${{ steps.git_short_hash.outputs.result }}-${{ matrix.platform.zip_os_name }}-AppImage
+          path: publish_appimage
 
       - name: Upload Ryujinx.Headless.SDL2 artifact
         if: github.event_name == 'pull_request' && matrix.platform.os != 'macos-13'
